fixed random algo eval bug, partition result saved, results recalculated

--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,13 @@
 *.err
 *.sh
 *.sbatch
+*.pkl
 *slurm_logs/*
 *Figures/*
 *logs/*
 *notebook*
+*partitions/*
+
 
 # Cache directories
 **__pycache__
