notebook with 7 EA, added BPSO, faster vanilla PSO, new results

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,10 @@
 *logs/*
 *notebook*
 *partitions/*
-
+*clr*
 
 # Cache directories
 **__pycache__
 **.ipynb_checkpoints
+
+!meta_heuristic_playground.ipynb
