--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.err
 *.sh
 *.sbatch
+*.pkl
 *slurm_logs/*
 *Figures/*
 *logs/*
@@ -20,8 +21,7 @@ configs/*.yaml
 **__pycache__
 **.ipynb_checkpoints
 
-!meta_heuristic_playground.ipynb
 !configs/config_arato_default.yaml
 !configs/config_mkspan_default.yaml
 !*partitions/*.pkl
-!*inputs/*.pkl
+!inputs/task_graph_complete/*.pkl
