includ the results

--- a/.gitignore
+++ b/.gitignore
@@ -93,7 +93,7 @@ tmp/
 ################################################################################
 # Data / generated results
 ################################################################################
-outputs/
+# outputs/
 data/
 **/data/
 
