--- a/configs/config_fig3_taskgraph_gnn_noreg.yaml
+++ b/configs/config_fig3_taskgraph_gnn_noreg.yaml
@@ -28,6 +28,12 @@ diffgnn:
   dropout: 0.2
   model: "default"
   hard_eval_every: 50
+  selection_metric: "queue"
+  selection_metric_train: "queue"
+  selection_metric_final: "legacy_lp"
+  final_legacy_lp_if_mip: true
+  reuse_trained_final_cost: true
+  speed_patch: true
   entropy_coeff: 0.0
   usage_balance_coeff: 0.0
   partition_cost_coeff: 0.0833333333
@@ -42,6 +48,11 @@ diffgnn_order:
   model: "default"
   hard_eval_every: 50
   fast_mode: true
+  speed_patch: true
+  sinkhorn_iters: 8
+  order_refine_steps: 1
+  gumbel_noise: false
+  gumbel_scale: 0.0
   entropy_coeff: 0.0
   usage_balance_coeff: 0.0
   perm_reg_coeff: 0.0
